--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,12 @@
 
 <div class="container py-4 text-center">
 
-
+   
     {% if current_user.is_authenticated %}
 
     <h1>Welcome {{ current_user.username }}</h1>
     <h1>key: {{ current_user.key }}</h1>
+    <h1>len: {{current_user.key|length}}</h1>
     <h1>hash: {{ current_user.pwd }}</h1>
     <a href="{{url_for('logout')}}">Logout</a>
 
